--- a/shadowrocket_online/ipa.plist
+++ b/shadowrocket_online/ipa.plist
@@ -10,7 +10,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://ios.xfgss.com/Shadowrocket_2.1.23.ipa</string>
+                        <string>https://ssrscloud.xyz/ssr/shadowrocket_online/Shadowrocket_2.1.23.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
